added some CSS and JS

--- a/css/main.css
+++ b/css/main.css
@@ -15,16 +15,6 @@ html {
   color: #222;
   font-size: 1em;
   line-height: 1.4;
-  font-family: 'Special Elite', cursive;
-}
-
-body {
-  margin: 0 auto;
-  width: 90%;
-}
-
-li {
-  list-style: none;
 }
 
 
@@ -97,7 +87,16 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
+  body {
+    /* printing press like font */
+    font-family: 'Special Elite', cursive;
+    margin: 0 auto;
+    width: 90%;
+  }
+  
+  ul>li {
+    list-style: none;
+  }
 /* ==========================================================================
    Helper classes
    ========================================================================== */
