--- a/css/main.css
+++ b/css/main.css
@@ -93,6 +93,19 @@ textarea {
     margin: 0 auto;
     width: 90%;
   }
+
+  .navButton {
+    text-decoration: underline;
+    cursor: pointer;
+  }
+
+  .navButton:hover {
+    color: #5730c5;
+  }
+
+  a:visited{
+    color: #000;
+  }
   
   ul>li {
     list-style: none;
